subprojects/groovy-parser-antlr4/src/test/resources/fail/ClosureListExpression_01.groovy
[].for(1;2;3){println "in loop"}